tests/snapshots/validation_generator_tests__is_defined_helper.snap
---
source: tests/validation_generator_tests.rs
expression: result
---
/**
 * Check if a value is defined (not null or undefined)
 */
function isDefined<T>(value: T | null | undefined): value is T {
    return value !== null && value !== undefined;
}
